SVY-21025 be able to just show a form in the browser for unit testing that forms [ai] try to run tests in jenkins