@@ -11,4 +11,20 @@
     </parent>
     <artifactId>com.servoy.eclipse.developer.mcp</artifactId>
     <packaging>eclipse-plugin</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <useUIHarness>false</useUIHarness>
+                    <application>org.eclipse.pde.junit.runtime.coretestapplication</application>
+                    <testClass>com.servoy.eclipse.developer.mcp.AllDeveloperMcpTests</testClass>
+                    <argLine>-Xms128m -Xmx512m -ea --add-exports=java.base/sun.security.x509=ALL-UNNAMED -Dorg.osgi.framework.system.packages.extra=sun.security.x509</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
